--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,168 @@
-h1{
+body {
   font-family: "Montserrat";
-  font-weight: 900;
+  text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+/* Headings */
+.big-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
   font-size: 3rem;
   line-height: 1.5;
 }
-.container-fluid{
-  padding: 3% 15%;
+
+.feature-title {
+  font-size: 1.5rem;
 }
-#title{
+/* Containers */
+.container-fluid {
+  padding: 7% 15%;
+}
+
+
+
+/* Navigation Bar */
+.navbar {
+  padding: 0 0 4.5rem 0;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-weight: lighter;
+}
+
+/* Download buttons */
+.download-button {
+  margin: 5% 3% 5% 0;
+}
+/* Title Section */
+#title {
   background-color: #ff4c68;
+  color: white;
+  text-align: left;
+}
+#title .container-fluid {
+  padding: 3% 15% 7%;
+}
+/* Title Image */
+.meet-title {
+  position: absolute;
+}
+
+.title-image {
+  max-width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 15%;
+  margin: 0 0 0 3%;
+}
+
+/* Features Section */
+#features {
+  background-color: #fff;
+  position: relative;
+}
+
+.feature-box {
+  padding: 5%;
+}
+
+.icons {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icons:hover {
+  color: #ff4c68;
+}
+
+/* Testimonial Section */
+#testimonials {
+
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Press section */
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+
+/* Pricing */
+#pricing {
+  padding: 50px;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.pricing-column {
+  padding: 7% 10%;
+}
+
+/* Call to Action Section */
+#cta {
+  background-color: #ff4c68;
+  font-weight: bold;
+  color: #fff;
+}
+
+.social-icons {
+  margin: 20px 10px;
+  color: #black;
+}
+
+/* Footer section*/
+
+/* Media Sizing */
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
 }
